feat: keep last SolutionTest.java's test cases
When execute mvn leetcode:generateSolution, keep the previous SolutionTest.java's test cases.

--- a/src/main/resources/template/SolutionTest.vm
+++ b/src/main/resources/template/SolutionTest.vm
@@ -36,7 +36,7 @@ public class SolutionTest {
     @Parameters
     public static Collection<Object[]> testCases() {
         return Arrays.asList(new Object[][]{
-            // todo add your test cases here
+$testCasesStr
         });
     }
 
