feat: change solution file to implement Solution.java interface
1. add Solution.java interface file
2. modify pom.xml version to 1.5-SNAPSHOT

--- a/src/main/resources/template/Solution.vm
+++ b/src/main/resources/template/Solution.vm
@@ -9,7 +9,8 @@ $problemDescription
 
 // Notes:
 
-public class $className {
+public class $className implements Solution {
 
+    @Override
     ${problemMethodStructure}
 }
