fix: add this missing semicolon to SolutionInterface template file

--- a/src/main/resources/template/SolutionInterface.vm
+++ b/src/main/resources/template/SolutionInterface.vm
@@ -3,5 +3,5 @@ package ${packageName}.${problemCategory}._${problemNo}_$problemName;
 
 public interface $interfaceName {
 
-${problemMethodStructure}
+    ${problemMethodStructure};
 }
